Fix not print buggery causing header to show up awkwardly on mobile.

--- a/style.css
+++ b/style.css
@@ -32,20 +32,6 @@ article {
   }
 }
 
-@media print {
-  body {
-    font-size: 13px;
-  }
-
-  article {
-    padding: 1em;
-  }
-
-  .hide-print {
-    display: none;
-  }
-}
-
 a,
 a:focus,
 a:visited,
@@ -145,13 +131,47 @@ ul {
   text-align: right;
 }
 
-@media (max-width: 700px) and not print {
+@media (max-width: 700px) {
   .columns div:nth-child(1),
   .columns div:nth-child(2),
   .columns div:nth-child(3) {
     width: 100%;
     position: static;
     text-align: left;
+  }
+}
+
+@media print {
+  body {
+    font-size: 13px;
+  }
+
+  article {
+    padding: 1em;
+  }
+
+  .hide-print {
+    display: none;
+  }
+
+  /* CSS is a true darling. */
+  .columns div:nth-child(1) {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  .columns div:nth-child(2) {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .columns div:nth-child(3) {
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-align: right;
   }
 }
 
